# Option_Selling_May_2026

./: .gitignore  .replit  BOT_OPERATIONAL_GUIDE.md  CLAUDE.md  DOCS_BACKTEST_DATA.md  INDICATOR_EXPLANATION.md  LIVE_TRADING_EXPECTATIONS.md  REFACTORING_GUIDE.md  TECHNICAL_FIX_EXPLANATION.md  TECHNICAL_LOGIC_FLOW.md  V3_USER_WORKFLOW_GUIDE.md  atp_data_NIFTY_2026-04-09.csv  check_api.py  ecosystem.config.js  package.json  pending-tasks-reference.md  pyproject.toml  replit.md  requirements.txt  test_dhan_bg.py  test_dhan_global.py  verify_client_dashboard.py  verify_connections.py
.claude-flow/: CAPABILITIES.md  config.yaml
attached_assets/: Pasted-2026-02-27-13-04-12-986-UpstoxApp-INFO-Logger-has-been-_1772177839726.txt  Pasted-2026-02-27-13-39-49-594-UpstoxApp-INFO-Logger-has-been-_1772180895000.txt  Pasted-2026-03-04-08-51-57-169-UpstoxApp-INFO-Logger-has-been-_1772597088587.txt  Pasted-2026-03-04-14-42-00-051-UpstoxApp-INFO-V2-MONITORING-St_1772633952607.txt  Pasted-2026-03-05-09-33-14-749-UpstoxApp-INFO-Logger-has-been-_1772683530508.txt  Pasted-2026-03-05-10-14-55-913-UpstoxApp-INFO-Logger-has-been-_1772685959004.txt  Pasted-2026-03-05-10-36-59-380-UpstoxApp-INFO-NIFTY-Default-ex_1772687314830.txt  Pasted-2026-03-05-10-50-37-028-UpstoxApp-INFO-V2-CE-BUY-Status_1772693214402.txt  Pasted-2026-03-05-12-30-31-701-UpstoxApp-INFO-No-saved-state-f_1772694104650.txt  Pasted-2026-03-05-13-11-37-868-UpstoxApp-INFO-Logger-has-been-_1772696560250.txt  Pasted-2026-03-05-13-21-36-724-UpstoxApp-INFO-Logger-has-been-_1772702610227.txt  (+88 more)
bot/: .gitignore  BOT_OPS_GUIDE.md  main.py  (+18 more)
(+675 files in other folders)
