[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "dulwich>=1.2.0",
    "aiohttp>=3.13.5",
    "bcrypt==4.1.2",
    "cryptography>=46.0.7",
    "dhan-tradehull>=3.0.6",
    "dhanhq>=2.0.2",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "kiteconnect>=5.2.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "protobuf>=7.34.1",
    "pyotp>=2.9.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
    "smartapi-python>=1.5.5",
    "upstox-python-sdk>=2.23.0",
    "upstox-totp>=1.0.8",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
]
